# amp-taxonomy-errors-etl

./: README.md  script.py
sql/: create_table_taxonomy_errors.sql
src/amp_taxonomy_etl/: __init__.py  cli.py  config.py  email_client.py  loader_bq.py  parser.py  pyproject.toml
